corrected a link color in the dark mode yellow skin

--- a/resources/assets/less/skins/skin-yellow-dark.less
+++ b/resources/assets/less/skins/skin-yellow-dark.less
@@ -143,7 +143,7 @@ a {
 }
 
 a:link {
-  color: var(--link);
+  color: var(--header);
 }
 
 a:visited {
